Added collated code for all personnel

--- a/collated/docs/A0139621H.md
+++ b/collated/docs/A0139621H.md
@@ -1,5 +1,69 @@
 # A0139621H
-###### /UserGuide.md
+###### \DeveloperGuide.md
+``` md
+#### Use case: Aliasing command keyword
+
+**MSS**
+
+1. User requests to change the keyword of a command.
+2. Task Manager modifies the corresponding command's old keyword to the new one. <br>
+Use case ends.
+
+**Extensions**
+
+2a. The old command that was entered is invalid.
+
+> 2a1. User is notified that the command word is invalid. <br>
+Use case ends.
+
+2b. The new command keyword is already in use by another command.
+
+> 2b1. User is notified as such, and is shown which command is using this keyword. <br>
+Use case ends.
+
+#### Use case: Storage command
+
+**MSS**
+
+1. User requests to change the storage path and/or filename of the Task Manager.
+2. Task Manager modifies the storage path and/or filename accordingly.
+3. Task Manager also updates the filepath at the bottom of the UI. <br>
+Use case ends.
+
+**Extensions**
+
+2a. The new filepath entered is invalid.
+
+> 2a1. User is notified that the filepath is invalid. <br>
+Use case ends.
+
+2b. The new filepath entered is unaccessible.
+
+> 2b1. User is notified that the filepath cannot be used and is thus invalid. <br>
+User case ends.
+
+2c. The filename entered is already in use.
+
+> 2c1. User is notified that any changes to the new file will overwrite that of the old one. <br>
+User case resumes at step 3
+
+#### Use case: Undo
+
+**MSS**
+
+1. User requests to undo an action.
+2. Task manager undos the user's previous action and displays what was undone. <br>
+Use case ends.
+
+**Extensions**
+
+2a. There are no actions to be undone.
+
+> 2a1. User is notified as such. <br>
+Use case ends.
+
+```
+###### \UserGuide.md
 ``` md
 <a id="done"></a>
 #### Ticking off tasks: `done`
@@ -11,7 +75,6 @@ Format: `done <task number>`
 Examples:
  * `done 1`
  * `done 3`
-
 
 
 <a id="undo"></a>
@@ -51,52 +114,15 @@ Example:
   * `storage data/TaskNinja.xml`
 
 
-<a id="alias"></a>
-#### Alias Commands: `alias`
-_If you're an advanced user, you may replace our existing commands with a keyword of your own!_<br>
-Format: `alias <command name> <new command name>`
-
-> * Take note that you cannot replace a command with a keyword that is already in use. <br>
-> * To a command's alias, simply use help for that command. <br>
-
-Examples:
-  * `alias add +`
-  * `alias + add`
-  * `alias priority p`
-
-
-<a id="clear"></a>
-#### Clear: `clear`
-_Wipes off all tasks and tags from TaskNinja._<br>
-Format: `clear`
-
-> * *WARNING*: This command is irreversible! It cannot be undone even with the `undo` command! <br>
-> * You should hence be VERY sure if you wish to use this command at any point in time, unless you have saved your tasks to another .xml file! <br>
-
-
-<a id="exit"></a>
-#### Exiting Task Ninja: `exit`
-_This command closes Task Ninja. Hope to see you back soon!_<br>
-Format: `exit`
-
-Example:
-  * `exit`
-
-
-#### Saving the data
-Tasks are saved in the hard disk automatically after any command that changes the data.<br>
-There is no need to save manually.
-
-
 ```
-###### /UserGuide.md
+###### \UserGuide.md
 ``` md
 # Appendix A
 _This appendix lists down all the inputs of dates and times that are accepted when adding/editing a task._<br>
 _As we are using PrettyTime parser to read in dates and times, we strongly recommend you to follow this table in order to let you have the best experience when using Task Ninja!_<br>
 _You may also refer to the examples in [Event](#from-to), [At](#at) and [By](#by) sections for an overview of how to input your dates and times when adding/editing your task._<br>
 
-> * The current time (in HH:MM:SS) will be timestamped to your tasks should you decide not to enter a time.
+> * The current time will be timestamped to your tasks should you only enter a date and no time.
 > * The following examples use Wed 19 Oct 12:00:00 2016 as the current time and date, unless otherwise specified
 
 Input | Read in as | Comments
