--- a/collated/docs/A0147924X.md
+++ b/collated/docs/A0147924X.md
@@ -1,5 +1,5 @@
 # A0147924X
-###### /DeveloperGuide.md
+###### \DeveloperGuide.md
 ``` md
 ## Introduction
 
@@ -9,46 +9,106 @@ This guide describes how Task Ninja has been designed and implemented. It is dir
 
 
 ```
-###### /DeveloperGuide.md
+###### \DeveloperGuide.md
+``` md
+### Logic component
+
+<p align="center"><img src="images/LogicClassDiagram.png" width="800"><br>
+<sub>Fig 5: Class Diagram for Logic component</sub></p>
+
+**API** : [`Logic.java`](../src/main/java/seedu/manager/logic/Logic.java)
+
+The `Logic`,
+* Uses the `Parser` class to parse the user command. The `Parser` class employs an `ExtensionParser` class to parse extensions into Task Properties.
+* Executes the `Command` object returned by the `Parser` class.
+* Encapsulates the result of the command execution as a `CommandResult` object and passes it back to the `UI`.
+
+> The command execution can affect the `Model` (e.g. adding a task) and/or raise events.
+
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("add Name")` API call.<br><br>
+
+<p align="center"><img src="images/AddTaskSdForLogic.png" width="800"><br>
+<sub>Fig 6: Sequence Diagram for Add command in Logic component</sub></p>
+
+#### Low-level details about the Logic Component
+
+Undo Command:<br>
+The `Command` class keeps a static stack of `UndoableCommand` objects. Every time an `UndoableCommand` is successfully executed, it is added to this stack. When the user wishes to undo an action, an element is popped off the stack, and this command is undone.<br>
+
+Link between `Parser` and `Model`:<br>
+The `UserPrefs` object in the model (see [`Model`](#model-component)) stores the command keywords. The `Parser` object keeps a reference to these keywords, so that it can parse commands entered by the user.
+
+
+### Model component
+
+<p align="center"><img src="images/ModelClassDiagram.png" width="800"><br>
+<sub>Fig 7: Class Diagram for Model component</sub></p>
+
+**API** : [`Model.java`](../src/main/java/seedu/manager/model/Model.java)
+
+The `Model`,
+* Stores a `UserPref` object that represents the user's preferences.
+* Stores the Task Manager data.
+* Exposes a `UnmodifiableObservableList<ReadOnlyTask>` that can be 'observed' e.g. the `UI` can be bound to this list so that the `UI` automatically updates when the data in the list change.
+* Does not depend on any of the other three components.
+
+#### Low-level details about the Model Component
+
+TaskProperty:<br>
+This is an abstract class that all the task properties (like venue and description) inherit from. It provides most of the API that TaskProperty objects need to expose to other classes. These API are sometimes overridden by the subclasses, for example to provide their own version of a pretty string value (the string displayed on the UI).
+
+```
+###### \DeveloperGuide.md
 ``` md
 ## Appendix A : User Stories
 
-Likeliness: Likely - `L`, Unlikely - `U`
-
-Likeliness | As (a)... | I want to... | So that I can...
--------- | :-------- | :--------- | :-----------
-`L` | All Users | Interact with the manager using a CLI and keys | Get rid of the usage for a mouse
-`L` | New User | View info about a command | Learn how to use these commands
-`L` | User | Add tasks with a description and a specific deadline | Set deadlines for tasks
-`L` | User | Add tasks with description, start time and end time | Create events in the task manager
-`L` | User | Add tasks with only a description | Set tasks that do not have certain time, which are called floating tasks
-`L` | User | Add tasks that starts from a certain time | Set tasks that do not have an end time
-`L` | User | Modify a task | Update deadlines and descriptions
-`L` | User | Delete a task | Remove it from the Task Manager's to-do list
-`L` | User | Tick off a task | Record that this task is complete by marking it as done
-`L` | User | Search for task(s) | Find task(s) and maybe edit it
-`L` | User | See upcoming tasks | Decide what to do next
-`L` | User | Assign priority to tasks | Gauge which task should be done next
-`L` | User | Sort upcoming tasks by priority | Make the decision of which task to complete next faster
-`L` | User | See tasks in a specific period of time | See what has been scheduled for a certain period
-`L` | User | See upcoming tasks up until a specified time | See less / more upcoming tasks according to the time frame I want
-`L` | User | Undo operation(s) | Remove a mistake
-`L` | Advanced User | Edit the storage file | Make changes without going through the manager
-`L` | Advanced User | Declare my own names for commands | Personalize the experience and make it more efficient
-`U` | New User | View the procedure of creating a task | Learn how to create a task first
-`U` | User | Declare tasks that have to be done after a certain time | Record these tasks somewhere and not be bothered by them until a certain time
-`U` | User | Redo operation(s) | Redo a change that had been undone
-`U` | User | Declare recurring tasks | Remove the need to enter these tasks multiple times
-`U` | User | Search for empty slots (within a given time frame) | Decide when to schedule a task
-`U` | User | Integrate with third-party applications like GCalendar | Access my tasks on another platform too
-`U` | User | List [floating tasks](#floating-task) | See whether I want to complete a floating task next
-`U` | User | Block multiple slots for a task | Choose later which slot I want to assign this task to and keep the selected slots free for that task
-`U` | User | Decide slot for an item blocking multiple slots | Free up the other slots for other tasks
-`U` | User | Receive emails/notifications about pressing deadlines | Be reminded to complete these tasks
-`U` | All Users | Use a keyboard shortcut to activate the manager | Speed up my workflow
+As (a)... | I want to... | So that I can...
+:-------- | :--------- | :-----------
+All Users | Interact with the manager using a CLI and keys | Get rid of the usage for a mouse
+New User | View info about a command | Learn how to use these commands
+User | Add tasks with a description and a specific deadline | Set deadlines for tasks
+User | Add tasks with description, start time and end time | Create events in the task manager
+User | Add tasks with only a description | Set tasks that do not have certain time, which are called floating tasks
+User | Add tasks that starts from a certain time | Set tasks that do not have an end time
+User | Modify a task | Update deadlines and descriptions
+User | Delete a task | Remove it from the Task Manager's to-do list
+User | Tick off a task | Record that this task is complete by marking it as done
+User | Search for task(s) | Find task(s) and maybe edit it
+User | See upcoming tasks | Decide what to do next
+User | Assign priority to tasks | Gauge which task should be done next
+User | Sort upcoming tasks by priority | Make the decision of which task to complete next faster
+User | See tasks in a specific period of time | See what has been scheduled for a certain period
+User | See upcoming tasks up until a specified time | See less / more upcoming tasks according to the time frame I want
+User | Undo operation(s) | Remove a mistake
+Advanced User | Edit the storage file | Make changes without going through the manager
+Advanced User | Declare my own names for commands | Personalize the experience and make it more efficient
 
 ```
-###### /UserGuide.md
+###### \DeveloperGuide.md
+``` md
+## Appendix C : Non Functional Requirements
+
+1. Should work on any [mainstream OS](#mainstream-os) as long as it has Java `1.8.0_60` or higher installed.
+2. Should be able to hold up to 1000 tasks.
+3. Should come with automated unit tests and open source code.
+4. Should open within 2 seconds.
+5. Should complete all operations within 0.5 seconds.
+6. Should not require an internet connection to work.
+7. Should not require installation to work.
+
+
+## Appendix D : Glossary
+
+##### Mainstream OS
+
+> Windows, Linux, Unix, macOS
+
+##### Floating Task
+
+> A task which has no specified date or time
+
+```
+###### \UserGuide.md
 ``` md
 # User Guide
 
@@ -265,8 +325,45 @@ Examples:
 
 
 ```
-###### /UserGuide.md
+###### \UserGuide.md
 ``` md
+<a id="alias"></a>
+#### Alias Commands: `alias`
+_If you're an advanced user, you may replace our existing commands with a keyword of your own!_<br>
+Format: `alias <command name> <new command name>`
+
+> * Take note that you cannot replace a command with a keyword that is already in use. <br>
+> * To a command's alias, simply use help for that command. <br>
+
+Examples:
+  * `alias add +`
+  * `alias + add`
+  * `alias priority p`
+
+
+<a id="clear"></a>
+#### Clear: `clear`
+_Wipes off all tasks and tags from TaskNinja._<br>
+Format: `clear`
+
+> * *WARNING*: This command is irreversible! It cannot be undone even with the `undo` command! <br>
+> * You should hence be VERY sure if you wish to use this command at any point in time, unless you have saved your tasks to another .xml file! <br>
+
+
+<a id="exit"></a>
+#### Exiting Task Ninja: `exit`
+_This command closes Task Ninja. Hope to see you back soon!_<br>
+Format: `exit`
+
+Example:
+  * `exit`
+
+
+#### Saving the data
+Tasks are saved in the hard disk automatically after any command that changes the data.<br>
+There is no need to save manually.
+
+
 ## Cheat Sheet
 
 Type | Command | Format | Example | Undoable? |
