--- a/collated/main/A0139621H.md
+++ b/collated/main/A0139621H.md
@@ -1,5 +1,5 @@
 # A0139621H
-###### /java/seedu/manager/logic/commands/FindCommand.java
+###### \java\seedu\manager\logic\commands\FindCommand.java
 ``` java
     @Override
     public CommandResult execute() {
@@ -57,7 +57,7 @@
     }
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
     /**
      * Parses arguments in the context of the find task command.
@@ -79,7 +79,7 @@
     }
     
 ```
-###### /java/seedu/manager/model/task/Desc.java
+###### \java\seedu\manager\model\task\Desc.java
 ``` java
     /**
      * Checks if any words from the task's venue matches that with the search function's input words
@@ -98,7 +98,7 @@
     }
 
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
     @Override
     public String getPrettyValue() {
@@ -106,7 +106,7 @@
     }
     
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
     /**
      * Checks if the task property matches with that of the search function's input
@@ -119,7 +119,7 @@
     }
 
 ```
-###### /java/seedu/manager/model/task/EndTime.java
+###### \java\seedu\manager\model\task\EndTime.java
 ``` java
 /**
  * Represents a Task's end time.
@@ -132,7 +132,7 @@ public class EndTime extends Time {
 	}
 }
 ```
-###### /java/seedu/manager/model/task/Priority.java
+###### \java\seedu\manager\model\task\Priority.java
 ``` java
     /**
      * Checks if the task property matches with that of the search function's input
@@ -145,12 +145,12 @@ public class EndTime extends Time {
     }
     
 ```
-###### /java/seedu/manager/model/task/ReadOnlyTask.java
+###### \java\seedu\manager\model\task\ReadOnlyTask.java
 ``` java
     public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> otherProps);
 }
 ```
-###### /java/seedu/manager/model/task/StartTime.java
+###### \java\seedu\manager\model\task\StartTime.java
 ``` java
 /**
  * Represents a Task's start time.
@@ -163,7 +163,7 @@ public class StartTime extends Time {
 	}
 }
 ```
-###### /java/seedu/manager/model/task/Tag.java
+###### \java\seedu\manager\model\task\Tag.java
 ``` java
     @Override
     public boolean matches(TaskProperty tag) {
@@ -174,7 +174,7 @@ public class StartTime extends Time {
 
 }
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     @Override
     public Optional<TaskProperty> getPriority() {
@@ -197,12 +197,12 @@ public class StartTime extends Time {
     }
     
 ```
-###### /java/seedu/manager/model/task/TaskProperty.java
+###### \java\seedu\manager\model\task\TaskProperty.java
 ``` java
 	public abstract boolean matches(TaskProperty property);
 }
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
     /**
      * Checks if the start time of a task is equal to or later than that of the search function's input
@@ -219,7 +219,7 @@ public class StartTime extends Time {
     }
 
 ```
-###### /java/seedu/manager/model/task/Venue.java
+###### \java\seedu\manager\model\task\Venue.java
 ``` java
     /**
      * Checks if any words from the task's venue matches that with the search function's input words
