--- a/collated/main/A0147924X.md
+++ b/collated/main/A0147924X.md
@@ -1,5 +1,5 @@
 # A0147924X
-###### /java/seedu/manager/commons/core/CommandWord.java
+###### \java\seedu\manager\commons\core\CommandWord.java
 ``` java
 /**
  * Represents a command in the task manager
@@ -24,16 +24,25 @@ public class CommandWord {
 			return commandRep;
 		}
 	}
+	
+	// @author A0148042M
+	/**
+	 * 
+	 * @return the FIND command word
+	 */
+	public static String getFindCommandWord() {
+	    return Commands.FIND.toString();
+	}
 }
 ```
-###### /java/seedu/manager/commons/core/Config.java
+###### \java\seedu\manager\commons\core\Config.java
 ``` java
     public Config() {
     	EventsCenter.getInstance().registerHandler(this);
     }
     
 ```
-###### /java/seedu/manager/commons/core/Config.java
+###### \java\seedu\manager\commons\core\Config.java
 ``` java
     @Subscribe
     /**
@@ -52,7 +61,7 @@ public class CommandWord {
     }
 }
 ```
-###### /java/seedu/manager/commons/events/logic/CommandWordsChangedEvent.java
+###### \java\seedu\manager\commons\events\logic\CommandWordsChangedEvent.java
 ``` java
 /**
  * Indicates that command words have changed
@@ -69,7 +78,7 @@ public class CommandWordsChangedEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/manager/commons/events/storage/ConfigFilePathChangedEvent.java
+###### \java\seedu\manager\commons\events\storage\ConfigFilePathChangedEvent.java
 ``` java
 /**
  * Indicates that the TaskManager Storage location has changed in the Config
@@ -92,7 +101,7 @@ public class ConfigFilePathChangedEvent extends BaseEvent {
 	}
 }
 ```
-###### /java/seedu/manager/commons/events/storage/StorageLocationChangedEvent.java
+###### \java\seedu\manager\commons\events\storage\StorageLocationChangedEvent.java
 ``` java
 /**
  * Indicates that the storage location has changed
@@ -116,7 +125,7 @@ public class StorageLocationChangedEvent extends BaseEvent {
 	}
 }
 ```
-###### /java/seedu/manager/commons/events/storage/UserPrefsChangedEvent.java
+###### \java\seedu\manager\commons\events\storage\UserPrefsChangedEvent.java
 ``` java
 /**
  * Indicates that User Preferences have changed
@@ -141,7 +150,7 @@ public class UserPrefsChangedEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/manager/commons/events/ui/JumpToTagListRequestEvent.java
+###### \java\seedu\manager\commons\events\ui\JumpToTagListRequestEvent.java
 ``` java
 /**
  * Indicates a request to jump to a certain tag
@@ -165,7 +174,7 @@ public class JumpToTagListRequestEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/commons/events/ui/JumpToTaskListRequestEvent.java
+###### \java\seedu\manager\commons\events\ui\JumpToTaskListRequestEvent.java
 ``` java
 /**
  * Indicates a request to jump to the list of tasks
@@ -188,7 +197,7 @@ public class JumpToTaskListRequestEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/AddCommand.java
+###### \java\seedu\manager\logic\commands\AddCommand.java
 ``` java
     /**
      * Convenience constructor using raw values.
@@ -205,7 +214,7 @@ public class JumpToTaskListRequestEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/logic/commands/AliasCommand.java
+###### \java\seedu\manager\logic\commands\AliasCommand.java
 ``` java
 /**
  * Allows user to alias commands
@@ -268,7 +277,7 @@ public class AliasCommand extends Command implements UndoableCommand {
 	}
 }
 ```
-###### /java/seedu/manager/logic/commands/Command.java
+###### \java\seedu\manager\logic\commands\Command.java
 ``` java
     /**
      * Jumps to the given task
@@ -302,7 +311,7 @@ public class AliasCommand extends Command implements UndoableCommand {
     }
     
 ```
-###### /java/seedu/manager/logic/commands/DoneCommand.java
+###### \java\seedu\manager\logic\commands\DoneCommand.java
 ``` java
 /**
  * Marks a task identified using it's last displayed index as done.
@@ -359,6 +368,9 @@ public class DoneCommand extends Command implements UndoableCommand {
 		}
     }
 	
+```
+###### \java\seedu\manager\logic\commands\DoneCommand.java
+``` java
 	/**
 	 * Marks the done property of a task
 	 * @param taskToMark The task which should be marked
@@ -372,9 +384,9 @@ public class DoneCommand extends Command implements UndoableCommand {
         propsToEdit.put(TaskProperties.DONE, Optional.of(done));
         return new Task(propsToEdit);
 	}
-	
+}
 ```
-###### /java/seedu/manager/logic/commands/EditCommand.java
+###### \java\seedu\manager\logic\commands\EditCommand.java
 ``` java
 /**
  * Allows tasks to be edited. Uses an index to extract the task to be edited and changes its
@@ -471,7 +483,7 @@ public class EditCommand extends Command implements UndoableCommand {
     }
     
 ```
-###### /java/seedu/manager/logic/commands/FindCommand.java
+###### \java\seedu\manager\logic\commands\FindCommand.java
 ``` java
     /**
      * If tag is present in the search properties, then raises an event requesting jump to that tag 
@@ -487,7 +499,7 @@ public class EditCommand extends Command implements UndoableCommand {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/HelpCommand.java
+###### \java\seedu\manager\logic\commands\HelpCommand.java
 ``` java
 /**
  * Format full help instructions for every command for display.
@@ -623,7 +635,7 @@ public class HelpCommand extends Command {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/SortCommand.java
+###### \java\seedu\manager\logic\commands\SortCommand.java
 ``` java
 /**
  * Allows user to sort the displayed tasks by priority
@@ -678,7 +690,7 @@ public class SortCommand extends Command {
 	}
 }
 ```
-###### /java/seedu/manager/logic/commands/StorageCommand.java
+###### \java\seedu\manager\logic\commands\StorageCommand.java
 ``` java
 /**
  * Allows user to change the storage location
@@ -781,7 +793,7 @@ public class StorageCommand extends Command {
 	}
 }
 ```
-###### /java/seedu/manager/logic/LogicManager.java
+###### \java\seedu\manager\logic\LogicManager.java
 ``` java
     public LogicManager(Model model, Storage storage) {
         this.model = model;
@@ -789,7 +801,7 @@ public class StorageCommand extends Command {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManager.java
+###### \java\seedu\manager\logic\LogicManager.java
 ``` java
     @Subscribe
     /**
@@ -801,7 +813,7 @@ public class StorageCommand extends Command {
     }
 }
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
 /**
  * Used to parse extensions in the user input
@@ -823,16 +835,10 @@ public class ExtensionParser {
             Pattern.compile("(?<startTime>.+?)\\sto\\s(?<endTime>.+)");
     
     private HashMap<Commands, String> extensionWords = null;
-    private ArrayList<Tag> tagList;
     
     public ExtensionParser(HashMap<Commands, String> extensionWordsIn) {
-        tagList = new ArrayList<Tag>();
         extensionWords = extensionWordsIn;
         compileRegexes();
-    }
-    
-    public ArrayList<Tag> getTagList() {
-        return tagList;
     }
     
     public void compileRegexes() {
@@ -931,7 +937,6 @@ public class ExtensionParser {
                 break;
             case TAG:
                 throwExceptionIfDuplicate(properties, TaskProperties.TAG, Commands.TAG);
-                addToTagList(arguments);
                 addToProperties(properties, TaskProperties.TAG, arguments);
                 break;
             default:
@@ -1007,7 +1012,7 @@ public class ExtensionParser {
     }
     
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
     /**
      * Adds a property to the properties HashMap
@@ -1020,9 +1025,9 @@ public class ExtensionParser {
             					 TaskProperties taskProperty, String arguments) {
         properties.put(taskProperty, arguments.equals("") ? Optional.empty() : Optional.of(arguments));
     }
-    
+}
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
 /**
  * Parses user input.
@@ -1164,7 +1169,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
     /**
      * Parses arguments in the context of the edit task command.
@@ -1207,7 +1212,7 @@ public class Parser {
 	}
     
 ```
-###### /java/seedu/manager/logic/parser/Parser.java
+###### \java\seedu\manager\logic\parser\Parser.java
 ``` java
     /**
      * Parses arguments in the context of the alias command
@@ -1259,7 +1264,7 @@ public class Parser {
     }
 }
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /**
      * Retrieves command keywords from the user preferences
@@ -1274,7 +1279,7 @@ public class Parser {
     HashMap<Commands, String> getExtensionWords();
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /**
      * Gets the alias for a certain command from the user preferences
@@ -1295,7 +1300,7 @@ public class Parser {
     		String messageNoMatch, String messageAliasAlreadyTaken) throws IllegalValueException;
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /**
      * Get the index of a specified tag in the list currently being displayed
@@ -1305,7 +1310,7 @@ public class Parser {
     int getIndexOfTag(Tag tag);
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Sorts the sorted and filtered task list by priority */
     void sortSortedFilteredTaskListByPriority();
@@ -1321,7 +1326,7 @@ public class Parser {
     int getIndexOfTask(ReadOnlyTask task);
 }
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     public HashMap<Commands, String> getCommandWords() {
     	return userPrefs.commandWords;
@@ -1333,7 +1338,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public String getAliasForCommand(Commands command) {
@@ -1361,7 +1366,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public void updateSortedFilteredTaskListToShowAll() {
@@ -1400,7 +1405,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/Desc.java
+###### \java\seedu\manager\model\task\Desc.java
 ``` java
     /**
      * Validates given desc.
@@ -1412,7 +1417,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/Desc.java
+###### \java\seedu\manager\model\task\Desc.java
 ``` java
     @Override
     public String getPrettyValue() {
@@ -1424,7 +1429,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
     /**
      * Validates given done indicator.
@@ -1441,7 +1446,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/task/Done.java
+###### \java\seedu\manager\model\task\Done.java
 ``` java
     @Override
     public int compareTo(TaskProperty other) {
@@ -1457,7 +1462,7 @@ public class Parser {
     }
 }
 ```
-###### /java/seedu/manager/model/task/Priority.java
+###### \java\seedu\manager\model\task\Priority.java
 ``` java
     private static enum VALUES {
     	LOW("low"), MED("med"), HIGH("high");
@@ -1493,7 +1498,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/task/Priority.java
+###### \java\seedu\manager\model\task\Priority.java
 ``` java
     @Override
     public int compareTo(TaskProperty other) {
@@ -1509,7 +1514,7 @@ public class Parser {
     }
 }
 ```
-###### /java/seedu/manager/model/task/ReadOnlyTask.java
+###### \java\seedu\manager\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Returns true if both have the same state. (interfaces cannot override .equals)
@@ -1527,7 +1532,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/ReadOnlyTask.java
+###### \java\seedu\manager\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Formats the task as pretty text, meant to be displayed on the UI and in messages
@@ -1635,7 +1640,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     /**
      * Build task from properties represented as Strings
@@ -1764,7 +1769,7 @@ public class Parser {
     }
 
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     @Override
     /**
@@ -1819,7 +1824,7 @@ public class Parser {
     }
     
 ```
-###### /java/seedu/manager/model/task/TaskProperty.java
+###### \java\seedu\manager\model\task\TaskProperty.java
 ``` java
 /**
  * An interface representing a property of a task
@@ -1891,7 +1896,7 @@ public abstract class TaskProperty implements Comparable<TaskProperty> {
     }
     
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
 /**
  * Represents a tasks time 
@@ -1995,7 +2000,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/task/Venue.java
+###### \java\seedu\manager\model\task\Venue.java
 ``` java
     /**
      * Validates given venue.
@@ -2012,7 +2017,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/UserPrefs.java
+###### \java\seedu\manager\model\UserPrefs.java
 ``` java
     public UserPrefs(){
         this.setGuiSettings(500, 500, 0, 0);
@@ -2045,7 +2050,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/UserPrefs.java
+###### \java\seedu\manager\model\UserPrefs.java
 ``` java
     /**
      * Get the keywords representing primary commands
@@ -2170,7 +2175,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/storage/StorageManager.java
+###### \java\seedu\manager\storage\StorageManager.java
 ``` java
     @Subscribe
     /**
@@ -2183,7 +2188,7 @@ public abstract class Time extends TaskProperty {
     }
 
 ```
-###### /java/seedu/manager/storage/StorageManager.java
+###### \java\seedu\manager\storage\StorageManager.java
 ``` java
     @Subscribe
     /**
@@ -2196,7 +2201,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/MainWindow.java
+###### \java\seedu\manager\ui\MainWindow.java
 ``` java
     /**
      * Gets the Tag List Panel
@@ -2205,15 +2210,8 @@ public abstract class Time extends TaskProperty {
         return this.tagListPanel;
     }
     
-    /**
-     * Rerender Status Bar Footer
-     */
-    public void rerenderStatusBarFooter() {
-    	statusBarFooter = StatusBarFooter.load(primaryStage, getStatusbarPlaceholder(), config.getTaskManagerFilePath());
-    }
-}
 ```
-###### /java/seedu/manager/ui/TaskCard.java
+###### \java\seedu\manager\ui\TaskCard.java
 ``` java
     /**
      * Colour overdue bar red if task is overdue
@@ -2225,7 +2223,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/UiManager.java
+###### \java\seedu\manager\ui\UiManager.java
 ``` java
     @Subscribe
     /**
@@ -2238,7 +2236,7 @@ public abstract class Time extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/UiManager.java
+###### \java\seedu\manager\ui\UiManager.java
 ``` java
     @Subscribe
     /**
@@ -2251,7 +2249,7 @@ public abstract class Time extends TaskProperty {
     }
 }
 ```
-###### /resources/view/TaskListCard.fxml
+###### \resources\view\TaskListCard.fxml
 ``` fxml
             <columnConstraints>
             	<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" maxWidth="10.0" />
@@ -2262,7 +2260,7 @@ public abstract class Time extends TaskProperty {
             	<HBox alignment="CENTER_LEFT" fx:id="overdue" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" GridPane.columnIndex="0">
                 </HBox>
 ```
-###### /resources/view/TaskListCard.fxml
+###### \resources\view\TaskListCard.fxml
 ``` fxml
                 <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="2">
                 	<padding>
