--- a/collated/main/A0148003U.md
+++ b/collated/main/A0148003U.md
@@ -1,5 +1,5 @@
 # A0148003U
-###### /java/seedu/manager/logic/commands/AddCommand.java
+###### \java\seedu\manager\logic\commands\AddCommand.java
 ``` java
     @Override
 	public CommandResult undoIt() {
@@ -15,7 +15,7 @@
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/Command.java
+###### \java\seedu\manager\logic\commands\Command.java
 ``` java
     /**
      * add undo-able command to the undoList.
@@ -40,7 +40,7 @@
     	}
 }
 ```
-###### /java/seedu/manager/logic/commands/DeleteCommand.java
+###### \java\seedu\manager\logic\commands\DeleteCommand.java
 ``` java
     @Override
     public CommandResult undoIt() {
@@ -58,7 +58,7 @@
 }
 
 ```
-###### /java/seedu/manager/logic/commands/DoneCommand.java
+###### \java\seedu\manager\logic\commands\DoneCommand.java
 ``` java
 	@Override
 	public CommandResult undoIt() {
@@ -77,9 +77,9 @@
         }
 		return new CommandResult (UNDO_SUCCESS);
 	}
-}
+
 ```
-###### /java/seedu/manager/logic/commands/EditCommand.java
+###### \java\seedu\manager\logic\commands\EditCommand.java
 ``` java
     @Override
     /**
@@ -108,7 +108,7 @@
     
 }
 ```
-###### /java/seedu/manager/logic/commands/UndoableCommand.java
+###### \java\seedu\manager\logic\commands\UndoableCommand.java
 ``` java
 /**
  * interface of UndoCommand.
@@ -118,7 +118,7 @@ public interface UndoableCommand {
 	public CommandResult undoIt();
 }
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
 	public boolean isBefore(Date time) {
 		if (value.before(time)) {
@@ -148,7 +148,7 @@ public interface UndoableCommand {
 	}
 }
 ```
-###### /java/seedu/manager/ui/TaskCard.java
+###### \java\seedu\manager\ui\TaskCard.java
 ``` java
     @FXML
     public void initialize() {
@@ -163,7 +163,7 @@ public interface UndoableCommand {
     }
     
 ```
-###### /java/seedu/manager/ui/TaskCard.java
+###### \java\seedu\manager\ui\TaskCard.java
 ``` java
     /**
      * initialize the context(description, id, venue, time, priority,
