--- a/collated/main/A0148042M.md
+++ b/collated/main/A0148042M.md
@@ -1,6 +1,7 @@
 # A0148042M
-###### /java/seedu/manager/commons/events/ui/TagPanelSelectionChangedEvent.java
+###### \java\seedu\manager\commons\events\ui\TagPanelSelectionChangedEvent.java
 ``` java
+/**
  * Represents a selection change in the Tag List Panel
  */
 public class TagPanelSelectionChangedEvent extends BaseEvent {
@@ -22,7 +23,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/manager/logic/commands/AddCommand.java
+###### \java\seedu\manager\logic\commands\AddCommand.java
 ``` java
     @Override
     public CommandResult execute() {
@@ -41,22 +42,18 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/logic/Logic.java
-``` java
-    /** Returns the filtered list of tags */
-    ObservableList<Tag> getSortedFilteredTagList();
-    
-}
-```
-###### /java/seedu/manager/logic/LogicManager.java
+###### \java\seedu\manager\logic\LogicManager.java
 ``` java
     @Override
+    /**
+     * Return the sorted and filtered tag list.
+     */
     public ObservableList<Tag> getSortedFilteredTagList() {
         return model.getSortedFilteredTagList();        
     }
     
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
+###### \java\seedu\manager\logic\parser\ExtensionParser.java
 ``` java
     /**
      * Parses events and puts the times into the properties
@@ -76,35 +73,25 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParser.java
-``` java
-    private void addToTagList(String arguments) throws IllegalValueException {
-        boolean isContained = tagList.contains(new Tag(arguments));
-        if(!isContained) {
-            tagList.add(new Tag(arguments));
-        }
-    }
-}
-```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Deletes the given tag. */
     void deleteTag(Tag tag);
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Adds the given tag */
     void addTag(Tag tag);
     
 ```
-###### /java/seedu/manager/model/Model.java
+###### \java\seedu\manager\model\Model.java
 ``` java
     /** Returns the sorted and filtered tag list as an {@code UnmodifiableObservableList<Tag>} */
     UnmodifiableObservableList<Tag> getSortedFilteredTagList();
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     /**
      * Initializes a ModelManager with the given TaskManager
@@ -126,7 +113,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     public ModelManager(ReadOnlyTaskManager initialData, UserPrefs userPrefs) {
         taskManager = new TaskManager(initialData);
@@ -140,7 +127,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public synchronized void deleteTag(Tag tag) {
@@ -148,20 +135,20 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public synchronized void addTag(Tag tag) {
         try {
             taskManager.addTag(tag);
         } catch (DuplicateTagException e) {
-            e.printStackTrace();
+            // Nothing will happen if there are duplicate tags
         }
         updateFilteredTagListToShowAll();
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     @Override
     public UnmodifiableObservableList<Tag> getSortedFilteredTagList() {
@@ -169,24 +156,96 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
     }
     
 ```
-###### /java/seedu/manager/model/ModelManager.java
+###### \java\seedu\manager\model\ModelManager.java
 ``` java
     public void updateFilteredTagListToShowAll() {
         filteredTags.setPredicate(null);
     }
     
 ```
-###### /java/seedu/manager/model/ReadOnlyTaskManager.java
+###### \java\seedu\manager\model\ModelManager.java
+``` java
+    @Subscribe
+    private void handleTagListPanelSelectionChangedEvent(TagPanelSelectionChangedEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        
+        HashMap<TaskProperties, Optional<TaskProperty>> tagToMatch = new HashMap<>();
+        Tag selectedTag = event.getNewSelection(); 
+        Optional<TaskProperty> tag = Optional.of(selectedTag);
+        for(TaskProperties prop : TaskProperties.values()) {
+            tagToMatch.put(prop, Optional.empty());
+        }
+        tagToMatch.put(TaskProperties.TAG, tag);
+        
+        updateFilteredTaskList(tagToMatch); 
+    }
+    
+    // @author
+    @Override
+    public void updateFilteredTaskList(HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch) {
+        updateFilteredTaskList(new PredicateExpression(new EnhancedSearchQualifier(propertiesToMatch)));
+    }
+    
+    private void updateFilteredTaskList(Expression expression) {
+        filteredTasks.setPredicate(expression::satisfies);
+    }
+
+    //========== Inner classes/interfaces used for filtering ==================================================
+
+    interface Expression {
+        boolean satisfies(ReadOnlyTask task);
+        String toString();
+    }
+
+    private class PredicateExpression implements Expression {
+
+        private final Qualifier qualifier;
+
+        PredicateExpression(Qualifier qualifier) {
+            this.qualifier = qualifier;
+        }
+
+        @Override
+        public boolean satisfies(ReadOnlyTask task) {
+            return qualifier.run(task);
+        }
+
+        @Override
+        public String toString() {
+            return qualifier.toString();
+        }
+    }
+
+    interface Qualifier {
+        boolean run(ReadOnlyTask task);
+        String toString();
+    }
+
+    private class EnhancedSearchQualifier implements Qualifier {
+        private HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch;
+        
+        public EnhancedSearchQualifier(HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch) {
+            this.propertiesToMatch = propertiesToMatch;
+        }
+        
+        @Override
+        public boolean run(ReadOnlyTask task) {
+            return task.matches(propertiesToMatch);
+        }
+    }
+}
+```
+###### \java\seedu\manager\model\ReadOnlyTaskManager.java
 ``` java
     UniqueTagList getUniqueTagList();
     
 ```
-###### /java/seedu/manager/model/ReadOnlyTaskManager.java
+###### \java\seedu\manager\model\ReadOnlyTaskManager.java
 ``` java
     List<Tag> getTagList();
 }
 ```
-###### /java/seedu/manager/model/tag/UniqueTagList.java
+###### \java\seedu\manager\model\tag\UniqueTagList.java
 ``` java
 /**
  * A list of tags that enforces no nulls and uniqueness between its elements.
@@ -343,7 +402,7 @@ public class UniqueTagList implements Iterable<Tag> {
     }
 }
 ```
-###### /java/seedu/manager/model/task/Tag.java
+###### \java\seedu\manager\model\task\Tag.java
 ``` java
 /**
  * Represents a Tag in the task manager.
@@ -367,7 +426,7 @@ public class Tag extends TaskProperty {
     }
 
 ```
-###### /java/seedu/manager/model/task/Tag.java
+###### \java\seedu\manager\model\task\Tag.java
 ``` java
     @Override
     public int hashCode() {
@@ -382,7 +441,7 @@ public class Tag extends TaskProperty {
     }
 
 ```
-###### /java/seedu/manager/model/task/Task.java
+###### \java\seedu\manager\model\task\Task.java
 ``` java
     @Override
     public Optional<TaskProperty> getTag() {
@@ -390,7 +449,7 @@ public class Tag extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/task/Time.java
+###### \java\seedu\manager\model\task\Time.java
 ``` java
     /**
      * @return this property's time
@@ -400,7 +459,7 @@ public class Tag extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/TaskManager.java
+###### \java\seedu\manager\model\TaskManager.java
 ``` java
     public ObservableList<Tag> getTags() {
         ObservableList<Tag> internalTagList = tags.getInternalList();
@@ -416,7 +475,6 @@ public class Tag extends TaskProperty {
         if(internalTagList.size() == 0) {
             for(int i = 0;i < tagListFromTaskList.size();i++) {
                 if(!internalTagList.contains(tagListFromTaskList.get(i))) {
-//                    internalTagList.add(tagListFromTaskList.get(i));
                     combinedTagList.add(tagListFromTaskList.get(i));
                 }
             }
@@ -456,7 +514,7 @@ public class Tag extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/TaskManager.java
+###### \java\seedu\manager\model\TaskManager.java
 ``` java
     /**
      * Add a tag to the task manager.
@@ -496,7 +554,7 @@ public class Tag extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/model/TaskManager.java
+###### \java\seedu\manager\model\TaskManager.java
 ``` java
     @Override
     public List<Tag> getTagList() {
@@ -513,7 +571,7 @@ public class Tag extends TaskProperty {
         return this.tags;
     }
 ```
-###### /java/seedu/manager/storage/XmlSerializableTaskManager.java
+###### \java\seedu\manager\storage\XmlSerializableTaskManager.java
 ``` java
     /**
      * These two methods are to get the UniqueTagList and the tag list directly.
@@ -529,7 +587,7 @@ public class Tag extends TaskProperty {
     }
 }
 ```
-###### /java/seedu/manager/ui/MainWindow.java
+###### \java\seedu\manager\ui\MainWindow.java
 ``` java
     void fillInnerParts() {
         taskListPanel = TaskListPanel.load(primaryStage, getTaskListPlaceholder(), logic.getSortedFilteredTaskList());
@@ -560,7 +618,7 @@ public class Tag extends TaskProperty {
     }
     
 ```
-###### /java/seedu/manager/ui/TagCard.java
+###### \java\seedu\manager\ui\TagCard.java
 ``` java
 /**
  * This TagCard will make UI shows a tag on the left side of task list
@@ -619,7 +677,7 @@ public class TagCard extends UiPart{
     }
 }
 ```
-###### /java/seedu/manager/ui/TagListPanel.java
+###### \java\seedu\manager\ui\TagListPanel.java
 ``` java
 /**
  * Panel containing the list of tasks.
@@ -712,7 +770,15 @@ public class TagListPanel extends UiPart {
 
 }
 ```
-###### /resources/view/DarkTheme.css
+###### \java\seedu\manager\ui\UiManager.java
+``` java
+    @Subscribe
+    private void handleTaskPanelSelectionChangedEvent(TaskPanelSelectionChangedEvent event){
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+    }
+    
+```
+###### \resources\view\DarkTheme.css
 ``` css
 .background {
     -fx-background-color: derive(#1d1d1d, 20%);
@@ -1003,7 +1069,7 @@ public class TagListPanel extends UiPart {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 ```
-###### /resources/view/MainWindow.fxml
+###### \resources\view\MainWindow.fxml
 ``` fxml
 		<SplitPane id="splitPane" fx:id="splitPane"
 			dividerPositions="0.4" VBox.vgrow="ALWAYS">
@@ -1033,7 +1099,7 @@ public class TagListPanel extends UiPart {
 	</children>
 </VBox>
 ```
-###### /resources/view/TagListCard.fxml
+###### \resources\view\TagListCard.fxml
 ``` fxml
 <HBox id="tagCardPane" fx:id="tagCardPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
     <children>
@@ -1071,7 +1137,7 @@ public class TagListPanel extends UiPart {
     </children>
 </HBox>
 ```
-###### /resources/view/TagListPanel.fxml
+###### \resources\view\TagListPanel.fxml
 ``` fxml
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seedu.manager.ui.TagListPanel" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
     <stylesheets>
