--- a/collated/test/A0139621H.md
+++ b/collated/test/A0139621H.md
@@ -1,5 +1,5 @@
 # A0139621H
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\FindCommandTest.java
 ``` java
 public class FindCommandTest extends TaskManagerGuiTest {
 
@@ -55,7 +55,7 @@ public class FindCommandTest extends TaskManagerGuiTest {
 
 
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_findVenue_successful() throws Exception {
@@ -105,7 +105,7 @@ public class FindCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_findStartTime_successful() throws Exception {
@@ -234,7 +234,7 @@ public class FindCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
         /**
          * Generates a Task object with given desc. Other fields will have some dummy values.
