--- a/collated/test/A0147924X.md
+++ b/collated/test/A0147924X.md
@@ -1,5 +1,5 @@
 # A0147924X
-###### /java/guitests/AddCommandTest.java
+###### \java\guitests\AddCommandTest.java
 ``` java
 public class AddCommandTest extends TaskManagerGuiTest {
 
@@ -51,7 +51,7 @@ public class AddCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/DoneCommandTest.java
+###### \java\guitests\DoneCommandTest.java
 ``` java
 public class DoneCommandTest extends TaskManagerGuiTest {
 
@@ -108,7 +108,7 @@ public class DoneCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
 public class EditCommandTest extends TaskManagerGuiTest {
     @Test
@@ -172,7 +172,7 @@ public class EditCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/SortCommandTest.java
+###### \java\guitests\SortCommandTest.java
 ``` java
 public class SortCommandTest extends TaskManagerGuiTest {
 	
@@ -260,7 +260,7 @@ public class SortCommandTest extends TaskManagerGuiTest {
 	}
 }
 ```
-###### /java/guitests/StorageCommandTest.java
+###### \java\guitests\StorageCommandTest.java
 ``` java
 public class StorageCommandTest extends TaskManagerGuiTest {
 	@Test
@@ -328,7 +328,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
 	}
 }
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_helpExtraArgs_errorMessageShown() throws Exception {
@@ -353,7 +353,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_sort_successful() throws Exception {
@@ -711,7 +711,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
     }
 
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_findThenSort_successful() throws Exception {
@@ -744,7 +744,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_findTag_successful() throws Exception {
@@ -771,7 +771,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
     }
     
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
     @Test
     public void execute_alias_wrongNumberOfArgs() throws Exception {
@@ -927,7 +927,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
         }
         
 ```
-###### /java/seedu/manager/logic/LogicManagerTest.java
+###### \java\seedu\manager\logic\LogicManagerTest.java
 ``` java
         /**
          * Generates a Task object with given desc and tag. Other fields will have some dummy values.
@@ -969,7 +969,7 @@ public class StorageCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/seedu/manager/logic/parser/ExtensionParserTest.java
+###### \java\seedu\manager\logic\parser\ExtensionParserTest.java
 ``` java
 public class ExtensionParserTest {
     private ExtensionParser extensionParser;
@@ -1104,7 +1104,7 @@ public class ExtensionParserTest {
     }
 }
 ```
-###### /java/seedu/manager/model/TimeTest.java
+###### \java\seedu\manager\model\TimeTest.java
 ``` java
 public class TimeTest {
 	@Test
@@ -1232,7 +1232,7 @@ public class TimeTest {
 	}
 }
 ```
-###### /java/seedu/manager/testutil/TestTask.java
+###### \java\seedu\manager\testutil\TestTask.java
 ``` java
     public String getAddCommand() {
         StringBuilder sb = new StringBuilder();
@@ -1275,7 +1275,7 @@ public class TimeTest {
 	}
 	
 ```
-###### /java/seedu/manager/testutil/TestUtil.java
+###### \java\seedu\manager\testutil\TestUtil.java
 ``` java
     /**
      * Sorts the given list of tasks by time (done tasks go to the bottom)
