--- a/collated/test/A0148003U.md
+++ b/collated/test/A0148003U.md
@@ -1,5 +1,5 @@
 # A0148003U
-###### /java/guitests/UndoCommandTest.java
+###### \java\guitests\UndoCommandTest.java
 ``` java
 public class UndoCommandTest  extends TaskManagerGuiTest  {
 
@@ -49,10 +49,93 @@ public class UndoCommandTest  extends TaskManagerGuiTest  {
 		assertResultMessage(String.format(AddCommand.MESSAGE_SUCCESS, taskToAdd.getAsPrettyText()));
 	}
 	
+	/**
+	 * Runs the undo command and check whether the result is correct
+	 * response to the expected result(expectedList).
+	 * @param expectedList the list before the undo command is executed.
+	 */
 	private void assertUndoSuccess(TestTask[] expectedList) {
 	    commandBox.runCommand("undo");
 	    assertTrue(taskListPanel.isListMatching(expectedList));
     }
 
 }
+```
+###### \java\seedu\manager\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void execute_undo_successful() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        Task toBeUndone = helper.lancelot();
+        
+        // execute command and verify result
+        logic.execute(helper.generateAddCommand(toBeUndone));
+        assertCommandBehavior("undo",String.format(AddCommand.UNDO_SUCCESS, toBeUndone));
+    }
+
+
+    @Test
+    public void execute_find_invalidArgsFormat() throws Exception {
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE);
+        assertCommandBehavior("find ", expectedMessage);
+    }
+
+    @Test
+    public void execute_find_onlyMatchesFullWordsInDescs() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task pTarget1 = helper.generateTaskWithDesc("bla bla KEY bla");
+        Task pTarget2 = helper.generateTaskWithDesc("bla KEY bla bceofeia");
+        Task p1 = helper.generateTaskWithDesc("KE Y");
+        Task p2 = helper.generateTaskWithDesc("KEYKEYKEY sduauo");
+
+        List<Task> fourTasks = helper.generateTaskList(p1, pTarget1, p2, pTarget2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = helper.generateTaskList(pTarget1, pTarget2);
+        helper.addToModel(model, fourTasks);
+
+        assertCommandBehavior("find KEY",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+
+    @Test
+    public void execute_find_isNotCaseSensitive() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithDesc("bla bla KEY bla");
+        Task p2 = helper.generateTaskWithDesc("bla KEY bla bceofeia");
+        Task p3 = helper.generateTaskWithDesc("key key");
+        Task p4 = helper.generateTaskWithDesc("KEy sduauo");
+
+        List<Task> fourTasks = helper.generateTaskList(p3, p1, p4, p2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = fourTasks;
+        helper.addToModel(model, fourTasks);
+
+        assertCommandBehavior("find KEY",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+
+    @Test
+    public void execute_find_matchesIfAnyKeywordPresent() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task pTarget1 = helper.generateTaskWithDesc("bla bla KEY bla");
+        Task pTarget2 = helper.generateTaskWithDesc("bla rAnDoM bla bceofeia");
+        Task pTarget3 = helper.generateTaskWithDesc("key key");
+        Task p1 = helper.generateTaskWithDesc("sduauo");
+
+        List<Task> fourTasks = helper.generateTaskList(pTarget1, p1, pTarget2, pTarget3);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = helper.generateTaskList(pTarget1, pTarget2, pTarget3);
+        helper.addToModel(model, fourTasks);
+
+        assertCommandBehavior("find key rAnDoM",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM,
+                expectedList);
+    }
+    
 ```
